--- a/index.html
+++ b/index.html
@@ -1,195 +1,340 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
-		
-		<title>Movie Review | Review</title>
 
-		<!-- Loading third party fonts -->
-		<link href="http://fonts.googleapis.com/css?family=Roboto:300,400,700|" rel="stylesheet" type="text/css">
-		<link href="fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 
-		<!-- Loading main css file -->
-		<link rel="stylesheet" href="style.css">
-		<link rel="stylesheet" href="star.css">
-		
-		<!--[if lt IE 9]>
+	<title>Movie Review | Review</title>
+
+	<!-- Loading third party fonts -->
+	<link href="http://fonts.googleapis.com/css?family=Roboto:300,400,700|" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
+	<link href="fonts/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
+	<!-- Loading main css file -->
+	<link rel="stylesheet" href="animations.css">
+	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="star.css">
+	<link rel="stylesheet" href="My-style.css">
+
+	<!--[if lt IE 9]>
 		<script src="js/ie-support/html5.js"></script>
 		<script src="js/ie-support/respond.js"></script>
 		<![endif]-->
 
-	</head>
+</head>
 
-	<body onload="getRandomMedia()">
-		
+<body onload="getRandomMedia()">
+	<div class="main-navbar">
+		<nav class="navbar transparent  navbar-expand-lg navbar-light container">
+			<a class="navbar-brand" href="#">ThinkBig</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+				aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
 
-		<div id="site-content">
-			<header class="site-header">
-				<div class="container">
+			<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+				<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+					<li class="nav-item active">
+						<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">About</a>
+					</li>
 
-					<!-- ThinkBIG Logo Start-->
-					<a href="http://think-big.solutions/" id="branding">
-						<img src="logo.png" width="130" height="100" alt="" class="logo">
-					</a>
-					<!-- ThinkBIG Logo End-->
-
-					<!-- Subscribe START-->
-					<div class="col-md-2" style="float: right">
-						<div class="contact-form">
-							<input type="submit"
-								   disabled=disabled
-								   value="Subscribe"
-								   style="display: block; margin-bottom:14px; width: 100%; height:90px ">
-						</div>
-					</div>
-					<!-- Subscribe End-->
-
-					<!-- EMAIL & Authentication Token Handling START-->
-					<div class="col-md-2" style="float: right">
-						<div class="contact-form">
-							<input type="submit" value="Send Auth Token"
-								   style="display: block; margin-bottom:
-									   14px; width: 100%">
-
-							<input type="submit" value="Test Auth Token"
-								   style="display: block; width: 100%">
-						</div>
-					</div>
-
-					<div class="col-md-5" style="float: right">
-						<div class="contact-form">
-							<input id="email_input" type="text" class="email" placeholder="enter your email">
-							<input id="token_input" type="text" class="email" placeholder="enter your verification token">
-						</div>
-					</div>
-					<!-- EMAIL & Authentication Token Handling END-->
+				</ul>
+				<form class="form-inline my-2 my-lg-0">
+					<input class="form-control mr-sm-2" type="search" placeholder="Search">
+					<!-- <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
+					<button class="btn-success" style="vertical-align:middle"><i class="fa fa-search"></i></button>
+				</form>
+				<div class="btn-subscribe" data-toggle="modal" data-target="#exampleModalCenter"><i
+						class="fa fa-subscribe"></i><span>Subscribe </span>
 				</div>
 
-			</header>
+
+			</div>
+		</nav>
 
 
-			<main class="main-content">
+	</div>
+
+	<!-- Modal -->
+	<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+		aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLongTitle">Subscription form</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<form>
+						<div class="form-group">
+							<input type="email" class="form-control" id="exampleInputEmail1"
+								aria-describedby="emailHelp" placeholder="Enter email">
+						</div>
+						<div class="form-group">
+							<input type="text" class="form-control" id="exampleInputText1" placeholder="Token">
+						</div>
+					</form>
+				</div>
+				<div class="modal-footer">
+					<button type="submit" class="btn btn-primary ">Send token</button>
+					<button type="submit" class="btn btn-primary ">Test token</button>
+
+				</div>
+			</div>
+		</div>
+	</div>
+	</div>
+	<div id="site-content">
+		<div class="enterance">
+			<div class="parallax">
 				<div class="container">
-					<div class="page">
+
+					<div class="mw-title slideDown">
+						<div class="logo">
+							<a href="http://think-big.solutions/"><img src="logo.png" alt=""></a>
+						</div>
+						<div class="title">
+
+							<h3>We believe that movies show us the truth of this world and present the good and bad, the winner and the looser,So who are you?</h3>
+							
+							<div class="btn-subscribe subs" data-toggle="modal" data-target="#exampleModalCenter"><i
+									class="fa fa-subscribe"></i><span>Subscribe </span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<header class="site-header">
+			<div class="container">
+				<div class="NewMovies">
+					<div class="upcoming-title">
+						<h3>Watch now</h3>
+					</div>
+					<div class="upcoming ">
+						<img src="movies/EndGame.jpg" alt="">
+					</div>
+					<div class="upcoming ">
+						<img src="movies/XMen.jpg" alt="">
+					</div>
+					<div class="upcoming ">
+						<img src="movies/cold persuit.jpg" alt="">
+					</div>
+					<div class="upcoming">
+						<img src="movies/Glass.jpg" alt="">
+					</div>
+
+				</div>
+
+			</div>
+
+		</header>
 
 
-						<div class="filters">
-							<select name="#" id="#" placeholder="Choose Category">
-								<option value="#">Action</option>
-								<option value="#">Drama</option>
-								<option value="#">Fantasy</option>
-								<option value="#">Horror</option>
-								<option value="#">Adventure</option>
-							</select>
-							<select name="#" id="#">
-								<option value="#">2012</option>
-								<option value="#">2013</option>
-								<option value="#">2014</option>
-							</select>
+		<main class="main-content">
+			<div class="container">
+				<div class="page">
+					<div class="movie-control">
 
-							<form class="search-form" style="float: right">
-								<input id="search_input" type="text" placeholder="Search...">
-								<button type="button"><i class="fa fa-search"></i></button>
-							</form>
+						<div class="control-buttons">
+							<button type="button" class="btn btn-filter"><i class="fa fa-filter"></i> Filter</button>
 						</div>
 
+						<div class="filter-section">
+							<div class="control-buttons">
+								<button type="button" class="btn btn-cancel"><i></i>Cancel</button>
+								<button type="button" class="btn btn-apply"><i></i> Apply</button>
+							</div>
+							<div class="filter-div">
+								<span>Category</span>
+								<div class="custom-control custom-checkbox">
+									<input type="checkbox" class="custom-control-input" id="customCheck1">
+									<label class="custom-control-label" for="customCheck1">Action</label>
+								</div>
+								<div class="custom-control custom-checkbox">
+									<input type="checkbox" class="custom-control-input" id="customCheck2">
+									<label class="custom-control-label" for="customCheck2">Horror</label>
+								</div>
+								<div class="custom-control custom-checkbox">
+									<input type="checkbox" class="custom-control-input" id="customCheck3">
+									<label class="custom-control-label" for="customCheck3">Drama</label>
+								</div>
+								<div class="custom-control custom-checkbox">
+									<input type="checkbox" class="custom-control-input" id="customCheck4">
+									<label class="custom-control-label" for="customCheck4">Comedy</label>
+								</div>
+								<div class="custom-control custom-checkbox">
+									<input type="checkbox" class="custom-control-input" id="customCheck40">
+									<label class="custom-control-label" for="customCheck40">Thriller</label>
+								</div>
+
+							</div>
+
+							<div class="filter-div">
+								<span>Year</span>
+								<div class="custom-control custom-checkbox">
+									<input type="checkbox" class="custom-control-input" id="customCheck5">
+									<label class="custom-control-label" for="customCheck5">2019</label>
+								</div>
+								<div class="custom-control custom-checkbox">
+									<input type="checkbox" class="custom-control-input" id="customCheck6">
+									<label class="custom-control-label" for="customCheck6">2018</label>
+								</div>
+								<div class="custom-control custom-checkbox">
+									<input type="checkbox" class="custom-control-input" id="customCheck7">
+									<label class="custom-control-label" for="customCheck7">2017</label>
+								</div>
+								<div class="custom-control custom-checkbox">
+									<input type="checkbox" class="custom-control-input" id="customCheck8">
+									<label class="custom-control-label" for="customCheck8">2016</label>
+								</div>
+								<div class="custom-control custom-checkbox">
+									<input type="checkbox" class="custom-control-input" id="customCheck9">
+									<label class="custom-control-label" for="customCheck9">2015</label>
+								</div>
+							</div>
+
+							<div class="filter-div">
+								<span>Rate</span>
+								<div class="custom-control custom-checkbox">
+									<input type="checkbox" class="custom-control-input" id="customCheck10">
+									<label class="custom-control-label" for="customCheck10">★★★★★</label>
+								</div>
+								<div class="custom-control custom-checkbox">
+									<input type="checkbox" class="custom-control-input" id="customCheck11">
+									<label class="custom-control-label" for="customCheck11">★★★★</label>
+								</div>
+								<div class="custom-control custom-checkbox">
+									<input type="checkbox" class="custom-control-input" id="customCheck12">
+									<label class="custom-control-label" for="customCheck12">★★★</label>
+								</div>
+								<div class="custom-control custom-checkbox">
+									<input type="checkbox" class="custom-control-input" id="customCheck13">
+									<label class="custom-control-label" for="customCheck13">★★</label>
+								</div>
+								<div class="custom-control custom-checkbox">
+									<input type="checkbox" class="custom-control-input" id="customCheck14">
+									<label class="custom-control-label" for="customCheck14">★</label>
+								</div>
+							</div>
+
+						</div>
 
 						<div id="media" class="movie-list">
-
 
 						</div> <!-- .movie-list -->
 
 
 
 					</div>
-
+					<div class="control-button">
+						<div class="btn-group mr-2" role="group" aria-label="First group">
+						    <button type="button" class="btn btn-secondary">1</button>
+							<button type="button" class="btn btn-secondary">2</button>
+							<button type="button" class="btn btn-secondary">3</button>
+							<button type="button" class="btn btn-secondary">4</button>
+							<button type="button" class="btn btn-secondary">>></button>
+						</div>
+					</div>
 				</div> <!-- .container -->
-			</main>
+		</main>
 
 
 
 
 
 
-			<footer class="site-footer">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-2">
-							<div class="widget">
-								<h3 class="widget-title">About Us</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia tempore vitae mollitia nesciunt saepe cupiditate</p>
-							</div>
+		<footer class="site-footer">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-2">
+						<div class="widget">
+							<h3 class="widget-title">About Us</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia tempore vitae mollitia
+								nesciunt saepe cupiditate</p>
 						</div>
-						<div class="col-md-2">
-							<div class="widget">
-								<h3 class="widget-title">Recent Review</h3>
-								<ul class="no-bullet">
-									<li>Lorem ipsum dolor</li>
-									<li>Sit amet consecture</li>
-									<li>Dolorem respequem</li>
-									<li>Invenore veritae</li>
-								</ul>
-							</div>
+					</div>
+					<div class="col-md-2">
+						<div class="widget">
+							<h3 class="widget-title">Recent Review</h3>
+							<ul class="no-bullet">
+								<li>Lorem ipsum dolor</li>
+								<li>Sit amet consecture</li>
+								<li>Dolorem respequem</li>
+								<li>Invenore veritae</li>
+							</ul>
 						</div>
-						<div class="col-md-2">
-							<div class="widget">
-								<h3 class="widget-title">Help Center</h3>
-								<ul class="no-bullet">
-									<li>Lorem ipsum dolor</li>
-									<li>Sit amet consecture</li>
-									<li>Dolorem respequem</li>
-									<li>Invenore veritae</li>
-								</ul>
-							</div>
+					</div>
+					<div class="col-md-2">
+						<div class="widget">
+							<h3 class="widget-title">Help Center</h3>
+							<ul class="no-bullet">
+								<li>Lorem ipsum dolor</li>
+								<li>Sit amet consecture</li>
+								<li>Dolorem respequem</li>
+								<li>Invenore veritae</li>
+							</ul>
 						</div>
-						<div class="col-md-2">
-							<div class="widget">
-								<h3 class="widget-title">Join Us</h3>
-								<ul class="no-bullet">
-									<li>Lorem ipsum dolor</li>
-									<li>Sit amet consecture</li>
-									<li>Dolorem respequem</li>
-									<li>Invenore veritae</li>
-								</ul>
-							</div>
+					</div>
+					<div class="col-md-2">
+						<div class="widget">
+							<h3 class="widget-title">Join Us</h3>
+							<ul class="no-bullet">
+								<li>Lorem ipsum dolor</li>
+								<li>Sit amet consecture</li>
+								<li>Dolorem respequem</li>
+								<li>Invenore veritae</li>
+							</ul>
 						</div>
-						<div class="col-md-2">
-							<div class="widget">
-								<h3 class="widget-title">Social Media</h3>
-								<ul class="no-bullet">
-									<li>Facebook</li>
-									<li>Twitter</li>
-									<li>Google+</li>
-									<li>Pinterest</li>
-								</ul>
-							</div>
+					</div>
+					<div class="col-md-2">
+						<div class="widget">
+							<h3 class="widget-title">Social Media</h3>
+							<ul class="no-bullet">
+								<li>Facebook</li>
+								<li>Twitter</li>
+								<li>Google+</li>
+								<li>Pinterest</li>
+							</ul>
 						</div>
-						<div class="col-md-2">
-							<div class="widget">
-								<h3 class="widget-title">Newsletter</h3>
-								<form action="#" class="subscribe-form">
-									<input type="text" placeholder="Email Address">
-								</form>
-							</div>
+					</div>
+					<div class="col-md-2">
+						<div class="widget">
+							<h3 class="widget-title">Newsletter</h3>
+							<form action="#" class="subscribe-form">
+								<input type="text" placeholder="Email Address">
+							</form>
 						</div>
-					</div> <!-- .row -->
+					</div>
+				</div> <!-- .row -->
 
-					<div class="colophon">Copyright 2014 Company name, Designed by Themezy. All rights reserved</div>
-				</div> <!-- .container -->
+				<div class="colophon">Copyright 2014 Company name, Designed by Themezy. All rights reserved</div>
+			</div> <!-- .container -->
 
-			</footer>
-		</div>
-		<!-- Default snippet for navigation -->
-		
+		</footer>
+	</div>
+	<!-- Default snippet for navigation -->
 
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+	<script src="js/jquery-1.11.1.min.js"></script>
+	<script src="js/plugins.js"></script>
+	<script src="js/app.js"></script>
+	<script src="js/Myapp.js"></script>
+	<script src="js/capp.js"></script>
 
-		<script src="js/jquery-1.11.1.min.js"></script>
-		<script src="js/plugins.js"></script>
-		<script src="js/app.js"></script>
-		<script src="js/capp.js"></script>
-
-	</body>
+</body>
 
 </html>
